--- a/html/platBind.html
+++ b/html/platBind.html
@@ -8,43 +8,56 @@
     <script type="text/javascript" src="../js/rem.js"></script>
     <title>2222</title>
 </head>
-<body>
-    <img class="hxm1" src="../assets/images/index.jpg" alt="">
+<body class="bgBodys">
+    <img src="../assets/images/ma.png" style="position:absolute;top: .35rem;left: .33rem;width: .91rem;height: .89rem;">
+    <img src="../assets/images/leaf.png" style="position:absolute;top: 2.4rem;left: 1.02rem;width: 1.13rem;height: .45rem;z-index: -999;">
     <div class="isHy">
         <div class="Hy fffColor" id="Hy">我是会员</div>
         <div class="NoHy" id="NoHy">非会员</div>
     </div>
-    <img class="qxjhb" src="../assets/images/qxjhb.png" alt="">
-    <div class="inputAlert">
-        <div class="title">HI: <span id="titleText">老朋友</span></div>
-        <div class="state" style="display: block;" id="new">八马准备了<span style="font-size: .34rem;">30</span>元红包作为见面礼，</div>
-        <div class="state" style="display: none;" id="Old">八马为您准备了神秘礼包，</div>
-        <div class="stateT">快来领取吧！</div>
-        <input type="text" class="input" placeholder="请输入手机号码" maxlength="11" id="telphone">
-        <div class="btn" id="sureBtn">立即领取</div>
+    <img class="qxjhb" src="../assets/images/qxjhb.png">
+    <div style="padding-bottom:1.5rem;">
+        <div class="inputAlert">
+            <img src="../assets/images/bgTea.png" style="position:absolute;top:1.2rem;left:0;z-index: -66;width: 4.77rem;height: 4.71rem;">
+            <img src="../assets/images/jb.png" style="position:absolute;top:4rem;left:3.73rem;z-index:6;width: .9rem;height: 1.79rem;">
+            <div class="title">HI: <span id="titleText">老朋友</span></div>
+            <div class="state" style="display: none;" id="new">八马准备了<span style="font-size: .34rem;">30</span>元红包作为见面礼，</div>
+            <div class="state" style="display: block;" id="Old">八马为您准备了神秘礼包，</div>
+            <div class="stateT">快来领取吧！</div>
+            <input type="text" class="input" placeholder="请输入手机号码" maxlength="11" id="telphone">
+            <div class="btn" id="sureBtn">立即领取</div>
+        </div>
+        <div class="btnFind">已经领取过红包，<span class="btnText" id="btnText">点击这里</span>查询</div>
     </div>
-    <div class="btnFind">已经领取过红包，<span class="btnText" id="btnText">点击这里</span>查询</div>
+    <img src='../assets/images/bgBottom.png' class='imgBottom'>
 
     <script src="../js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="../js/comm.js" type="text/javascript"></script>
     <script type="text/javascript">
+
         $(function(){
             var Page={
                 init: function(){
-                   this.bindEvent();
+                    var Wid = window.screen.width;
+                    var Hei = window.screen.height;
+                    // if(Wid/Hei < 0.562){
+                    //     $("body").append("<img src='../assets/images/hxm3.jpg' class='imgBottom'>");
+                    // }
+                    this.bindEvent();
                 },
                 bindEvent: function(){
+
                     var _this = this;
                     $("#Hy").on("click",function(){
                         $(this).addClass("fffColor").siblings().removeClass("fffColor");
-                        $("#new").show();
-                        $("#Old").hide();
+                        $("#Old").show();
+                        $("#new").hide();
                         $("#titleText").text("老朋友");
                     });
                     $("#NoHy").on("click",function(){
                         $(this).addClass("fffColor").siblings().removeClass("fffColor");
-                        $("#new").hide();
-                        $("#Old").show();
+                        $("#new").show();
+                        $("#Old").hide();
                         $("#titleText").text("新朋友");
                     });
                     // 立即领取按钮
@@ -76,6 +89,7 @@
                             },
                             success : function(data) {
                                 if(data.msg == "success"){
+                                    localStorage.setItem("user",JSON.stringify(data.msg));
                                     window.location.href="./platList.html?telphone="+telphone;
                                 }else{
                                     CommFunc.toast(data.msg);
