--- a/html/useGift.html
+++ b/html/useGift.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/comm.css">
     <script type="text/javascript" src="../js/rem.js"></script>
-    <title>适合门店</title>
+    <title>八马红包</title>
 </head>
 <body>
     <div class="bodyBg">
