--- a/html/useGift.html
+++ b/html/useGift.html
@@ -77,7 +77,7 @@
                         $(".startTime").text(start_time);
                         $(".endTime").text(end_time);
                         $(".xxxxxx").text(tick_code);
-                        if(rewardGifts.meiyoule){
+                        if(rewardGifts.status == 1){
                             $(".isBtn").text("现在核销").on("click",function(){  
                                 $(".entryOutput").show();
                             });
@@ -96,7 +96,7 @@
                         $(".startTime").text(start_time);
                         $(".endTime").text(end_time);
                         $(".xxxxxx").text(tick_code);
-                        if(getGifts.meiyoule){
+                        if(getGifts.status == 1){
                             $(".isBtn").text("现在核销").on("click",function(){  
                                 $(".entryOutput").show();
                             });
