--- a/html/rewardGift.html
+++ b/html/rewardGift.html
@@ -38,12 +38,21 @@
         $(function(){
             var Page={
                 init: function(){
-                    var Wid = window.screen.width;
-                    var Hei = window.screen.height;
-                    // if(Wid/Hei < 0.562){
-                    //     $("body").append("<img src='../assets/images/hxm3.jpg' class='imgBottom'>");
-                    // }
                     this.bindEvent();
+                },
+                // 校验
+                checkPhone:function(){
+                    var reg = /^1\d{10}$/;
+                    var telphone = $.trim($("#telphone").val());
+                    if(!telphone){
+                        CommFunc.toast("手机号码不能为空");
+                        return false;
+                    }
+                    if(!reg.test(telphone)){
+                        CommFunc.toast("请输入正确的手机号码");
+                        return false;
+                    }
+                    return telphone;
                 },
                 bindEvent: function(){
                     var _this = this;
@@ -59,63 +68,43 @@
                         $("#Old").hide();
                         $("#titleText").text("新朋友");
                     });
+                    
                     // 领取优惠券
                     $("#sureBtn").on("click",function(){
-                        var reg = /^1[3|4|5|7|8|9]\d{9}$/;
-                        var telphone = $.trim($("#telphone").val());
-                        if(telphone == ""){
-                            CommFunc.toast("手机号码不能为空");
-                            return;
-                        }
-                        if(!reg.test(telphone)){
-                            CommFunc.toast("请输入正确的手机号码");
-                            return;
-                        }
+                        var phone=_this.checkForm();
+                        if(!phone) return;
                         CommFunc.fAjax(
                             {
                                 url : "/alicrad/rewardGifts",
                                 type : 'get',
                                 data : {
-                                    "phone" : telphone
+                                    "phone" : phone
                                 },
                                 success : function(data) {
-                                    if(data.failed == true){
-                                        sessionStorage.setItem("rewardGifts",JSON.stringify(data.data));
-                                        window.location.href="./useGift.html?phone=" + telphone;
-                                    }else{
-                                        CommFunc.toast(data.message);
-                                    }
+                                    // data.failed:true
+                                    sessionStorage.setItem("rewardGifts",JSON.stringify(data.data||{}));
+                                    window.location.href="./useGift.html?phone=" + phone;
                                 }
                             }
                         );
                     });
                     // 根据手机号查询是否领取过券
                     $("#btnText").on("click",function(){
-                        var reg = /^1[3|4|5|7|8|9]\d{9}$/;
-                        var telphone = $.trim($("#telphone").val());
-                        if(telphone == ""){
-                            CommFunc.toast("手机号码不能为空");
-                            return;
-                        }
-                        if(!reg.test(telphone)){
-                            CommFunc.toast("请输入正确的手机号码");
-                            return;
-                        }
+                        var phone=_this.checkForm();
+                        if(!phone) return;
                         CommFunc.fAjax(
                             {
                                 url : "/alicrad/getGifts",
                                 type : 'get',   
                                 data : {
-                                    "phone" : telphone
+                                    "phone" : phone
                                 },
                                 success : function(data) {
-                                    if(data.failed == true){
-                                        if(data.data){
-                                            sessionStorage.setItem("getGifts",JSON.stringify(data.data));
-                                            window.location.href="./useGift.html?phone=" + telphone;
-                                        }else{
-                                            CommFunc.toast(data.message);
-                                        }
+                                    if(data.data){
+                                        sessionStorage.setItem("rewardGifts",JSON.stringify(data.data));
+                                        window.location.href="./useGift.html?phone=" + phone;
+                                    }else{
+                                        CommFunc.toast(data.message);
                                     }
                                 }
                             }
