--- a/html/rewardGift.html
+++ b/html/rewardGift.html
@@ -12,8 +12,8 @@
     <img src="../assets/images/ma.png" style="position:absolute;top: .35rem;left: .33rem;width: .91rem;height: .89rem;">
     <img src="../assets/images/leaf.png" style="position:absolute;top: 2.4rem;left: 1.02rem;width: 1.13rem;height: .45rem;z-index: -999;">
     <div class="isHy">
-        <div class="Hy fffColor" id="Hy">我是会员</div>
-        <div class="NoHy" id="NoHy">非会员</div>
+        <div class="Hy fffColor member_t0" id="Hy">我是会员</div>
+        <div class="NoHy member_t1" id="NoHy">非会员</div>
     </div>
     <img class="qxjhb" src="../assets/images/qxjhb.png">
     <div style="padding-bottom:1.5rem;">
@@ -21,15 +21,15 @@
             <img src="../assets/images/bgTea.png" style="position:absolute;top:1.2rem;left:0;z-index: -66;width: 4.77rem;height: 4.71rem;">
             <img src="../assets/images/jb.png" style="position:absolute;top:4rem;left:3.73rem;z-index:6;width: .9rem;height: 1.79rem;">
             <div class="title">HI: <span id="titleText">老朋友</span></div>
-            <div class="state" style="display: none;" id="new">八马准备了<span style="font-size: .34rem;">30</span>元红包作为见面礼，</div>
-            <div class="state" style="display: block;" id="Old">八马为您准备了神秘礼包，</div>
+            <div class="content_t content_t1" style="display: none;" id="new">八马准备了<span style="font-size: .34rem;">30</span>元红包作为见面礼，</div>
+            <div class="content_t content_t0" style="display: block;" id="Old">八马为您准备了神秘礼包，</div>
             <div class="stateT">快来领取吧！</div>
             <input type="text" class="input" placeholder="请输入手机号码" maxlength="11" id="telphone">
             <div class="btn" id="sureBtn">立即领取</div>
         </div>
         <div class="btnFind">已经领取过红包，<span class="btnText" id="btnText">点击这里</span>查询</div>
     </div>
-    <img src='../assets/images/bgBottom.png' class='imgBottom'>
+    <img src='../assets/images/bgBottom.png' class='imgBottom' />
 
     <script src="../js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="../js/comm.js" type="text/javascript"></script>
@@ -54,19 +54,22 @@
                     }
                     return telphone;
                 },
+                // 切换新老客户
+                changeMember:function(type){
+                    var titles=['老朋友','新朋友'];
+                    $(".member_t"+type).addClass("fffColor").siblings().removeClass("fffColor");
+                    $(".content_t").hide();
+                    $(".content_t"+type).show();
+                    $("#titleText").text(titles[type]);
+                    
+                },
                 bindEvent: function(){
                     var _this = this;
                     $("#Hy").on("click",function(){
-                        $(this).addClass("fffColor").siblings().removeClass("fffColor");
-                        $("#Old").show();
-                        $("#new").hide();
-                        $("#titleText").text("老朋友");
+                        _this.changeMember(0);
                     });
                     $("#NoHy").on("click",function(){
-                        $(this).addClass("fffColor").siblings().removeClass("fffColor");
-                        $("#new").show();
-                        $("#Old").hide();
-                        $("#titleText").text("新朋友");
+                        _this.changeMember(1);
                     });
                     
                     // 领取优惠券
