--- a/html/rewardGift.html
+++ b/html/rewardGift.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/comm.css">
     <script type="text/javascript" src="../js/rem.js"></script>
-    <title>八马红包</title>
+    <title>领红包</title>
 </head>
 <body class="bgBodys">
     <img src="../assets/images/ma.png" style="position:absolute;top: .35rem;left: .33rem;width: .91rem;height: .89rem;">
@@ -38,6 +38,7 @@
         $(function(){
             var Page={
                 init: function(){
+                    sessionStorage.removeItem("rewardGifts");
                     this.bindEvent();
                 },
                 // 校验
