--- a/html/test.html
+++ b/html/test.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/comm.css">
     <script type="text/javascript" src="../js/rem.js"></script>
-    <title>test</title>
+    <title>test222</title>
 </head>
 <body>
 </body>
